Feita das Análises dos gráficos de linhas e do gráfico de barras

--- a/Unidade1-FinalNotebook.ipynb
+++ b/Unidade1-FinalNotebook.ipynb
@@ -1641,13 +1641,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    " Análise Preliminar\n",
+    "   \n",
+    "    A fim de avaliar a situação dos artigos presentes da base de dados, foi realizado um gráfico de barras que contém as informações dos artigos referentes a sua situação atual: Finalizado, Em andamento e com relatório pendente(infomações disponiveis na base de dados). A partir da avaliação desses dados vizualizaremos se a base de dados contém mais artigos finalizados do que pendentes ou em andamento.\n",
+    "    \n",
+    "    Vizualizando o gráfico de barras acima, temos uma noção da quantidade de artigos que foram finalizados, dos que estão com relatório pendente e os que ainda estão em andamento. No total são 26474 artigos, sendo mostrados assim como o gráfico sugere, que a maioria desses estão finalizados, cerca de 21023, poucos estão ainda no processo de andamento, em torno de 1800, e alguns estão com relatório pendente, 3653. A partir desses nuúeros, pode-se concluir que em geral 80% dos artigos presentes na base de dados já estão finalizados, e 20% estão entre andamento e com relatório pendente. O que demonstra ser uma base de dados concisa, visto que a maioria já foi finalizado e publicado."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 4. Pelo menos dois gráficos de Linhas"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -1718,6 +1731,20 @@
     "\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Análise Preliminar - Gráfico de linhas de artigos publicados da UFRN\n",
+    "\n",
+    "   Para feita do primeiro gráfico foi realizado uma relação entre os artigos publicados em diferentes anos, a fim de se mostrar se a quantidade de artigos publicados aumentam ou diminuem com o passar dos anos. De acordo com o gráfico é possivel reparar que a medida em que os anos se passam a quantidade de trabalhos tendem a aumentar, apesar de certos picos e certas depressões que acontecem em alguns anos, como no caso do ano de 2013 em que a quantidade de artigos publicados foi a maior entre todos os outros anos e por algum motivo em 2014 houve uma baixa em relação ao ano anterior. Porém se formos conciderar no geral, percebemos que há um crescimento positivo a medida do passar dos anos na quantidade de artigos publicados.\n",
+    "   \n",
+    "\n",
+    "Análise Preliminar - Gráfico de linhas de artigos publicados do IMD\n",
+    "\n",
+    "   Após a análise do primeiro gráfico, percebe-se que há um crescimento linear com o passar dos anos dos artigos publicados da UFRN, a ideia desse segundo gráfico foi ver se esse crescimento também vale para os artigos feitos por pessoas do Instituto Metrópole Digital - IMD. A partir da análise do resultado do gráfico percebe-se que os artigos publicados das pessoas do IMD em relação ao passar dos anos, possuem um crescimento muito mais conciso e lienar do que em relação aos artigos da UFRN, nesse segundo gráfico vemos claramente que não há nem picos e nem depressões e sim um aumento gradativo do numero de artigos. "
    ]
   },
   {
@@ -2558,21 +2585,20 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
